[PLANET-1707] Fix spacing on various pages

--- a/assets/scss/common/_carousel-header.scss
+++ b/assets/scss/common/_carousel-header.scss
@@ -17,12 +17,16 @@ $slide-transition-speed: 1s;
     margin-bottom: 0;
   }
 
-  @include large-and-up {
-    margin-bottom: 60px;
-  }
+  &::after {
+    margin-bottom: 40px;
 
-  @include x-large-and-up {
-    margin-bottom: 80px;
+    @include large-and-up {
+      margin-bottom: 60px;
+    }
+
+    @include x-large-and-up {
+      margin-bottom: 80px;
+    }
   }
 
   .carousel-inner {
@@ -179,22 +183,19 @@ $slide-transition-speed: 1s;
 
   .main-header {
     color: $article-heading-color;
-    padding-top: 80px;
+    padding-top: 70px;
     padding-bottom: 0;
+    padding-left: 15px !important;
     height: 100%;
-
-    @include small-and-up {
-      padding-top: 124px;
-    }
 
     @include medium-and-up {
       padding-bottom: 0;
-      padding-top: 104px;
+      padding-top: 84px;
       height: auto;
     }
 
     @include large-and-up {
-      padding-top: 149px;
+      padding-top: 124px;
       padding-bottom: 32px;
     }
 
