--- a/assets/scss/common/_page-header.scss
+++ b/assets/scss/common/_page-header.scss
@@ -9,7 +9,7 @@
 
 .page-header {
   color: $black;
-  padding: 90px 0 30px 0;
+  padding: 90px 0 40px 0;
   position: relative;
 
   @include medium-and-up {
@@ -38,6 +38,7 @@
     font-size: rem(20);
     font-weight: 300;
     line-height: 1.3;
+    margin-bottom: 20px;
 
     @include medium-and-up {
       font-size: rem(22);
@@ -166,8 +167,12 @@
   width: 100%;
   margin-top: 40px;
 
+  @include medium-and-up {
+    margin-top: 24px;
+  }
+
   @include large-and-up {
-    margin-top: 50px;
+    margin-top: 24px;
   }
 
   @include x-large-and-up {
